# keyboard-manager

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/api/: aliases.py  errors.py  helper.py  layout.py  live.py  stats.py
backend/db/: app_names.py  heatmap_mapper.py  migrations.py  repository.py  seed.py
backend/parsers/: keycode_labels.py  keycodes.py  keystat_keys.py  topology.py  vial.py  zmk.py  zmk_keycodes.py
backend/scripts/: import_keystat.py
backend/tests/: conftest.py  test_app_names.py  test_heatmap_api.py  test_heatmap_mapper.py  test_helper_status_api.py  test_import.py  test_keycode_resolver.py  test_keystat_keys.py  test_layout_api.py  test_layout_upload.py  test_migrations.py  test_repository.py  test_stats_api.py  test_topology.py  test_vial_parser.py  test_zmk_parser.py
backend/tests/fixtures/: mylayout.vil
docs/: PRD.md  architecture.md  data-preservation.md  macos-accessibility.md  migration-from-hammerspoon.md
frontend/: Dockerfile  aliases.js  app.js  cheatsheet.js  grid-render.js  heatmap.js  index.html  interactive.js  key-tooltip.js  keycode-format.js  keyname-map.js  nginx.conf  static-viewer.js  stats.js  style.css  (+1 more)
native-helper/: README.md  com.keyboard-manager.helper.plist  install-launchd.sh  pyproject.toml  uninstall-launchd.sh
native-helper/native_helper/: app_tracker.py  dispatcher.py  keys.py  main.py  sink.py
native-helper/tests/: test_app_tracker.py  test_dispatcher.py  test_keys.py  test_main_pairing.py  test_sink.py
(+16 files in other folders)
