[project]
name = "keyboard-manager-helper"
version = "0.0.1"
description = "macOS host-side keystroke capture + WebSocket bridge for keyboard-manager."
requires-python = ">=3.11"
dependencies = [
  "pynput>=1.7",
  "pyobjc-framework-Cocoa>=10.3",
  "websockets>=13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", ".."]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
